fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1398,8 +1398,9 @@ margin-left: 10px;
 {
 	margin-top: 50px;
 	padding-top: 60px;
-	padding-bottom: 60px;
+	padding-bottom: 80px;
 	background-color: #363636;
+	margin-bottom: 80px;
 }
 
 .newsFoun h2
